author:
    Greg V
build-type:
    Simple
cabal-version:
    >= 1.18
--category: TODO
copyright:
    2014 Greg V <floatboth@me.com>
--description: TODO
extra-source-files:
    README.md
license-file:
    COPYING
license:
    Apache-2.0
maintainer:
    floatboth@me.com
name:
    gitson
--synopsis: TODO
tested-with:
    GHC == 7.6.3
  , GHC == 7.8.2
version:
    0.0.0

library
    build-depends:
        base
      , aeson
    default-language:
        Haskell2010
    exposed-modules:
        Gitson
        -- HASKELETON: New.Module
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        library

test-suite tests
    build-depends:
        base
      , gitson
      , hspec == 1.*
        , HUnit
        , QuickCheck
    default-language:
        Haskell2010
    ghc-options:
        -fhpc
        -Wall
        -Werror
    hs-source-dirs:
        library
        test-suite
    main-is:
        Spec.hs
    other-modules:
        Gitson
        -- HASKELETON: New.Module
        GitsonSpec
        -- HASKELETON: New.ModuleSpec
    type:
        exitcode-stdio-1.0

test-suite examples
    build-depends:
        base
      , Glob == 0.*
      , doctest == 0.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        DocTest.hs
    type:
        exitcode-stdio-1.0

test-suite coverage
    build-depends:
        base
      , process == 1.*
      , regex-compat == 0.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        HPC.hs
    type:
        exitcode-stdio-1.0

test-suite documentation
    build-depends:
        base
      , process == 1.*
      , regex-compat == 0.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        Haddock.hs
    type:
        exitcode-stdio-1.0

test-suite style
    build-depends:
        base
      , hlint == 1.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        HLint.hs
    type:
        exitcode-stdio-1.0

benchmark benchmarks
    build-depends:
        base
      , gitson
      , criterion == 0.6.*
        , hastache < 0.6
        , statistics < 0.11
    default-language:
        Haskell2010
    hs-source-dirs:
        benchmark
    main-is:
        Bench.hs
    type:
        exitcode-stdio-1.0
